一些消融实验和画图

--- a/.gitignore
+++ b/.gitignore
@@ -3,9 +3,12 @@
 *.swo
 __pycache__
 .idea
-processed_data
-data
-my_sample_prediction
-stopwords
-model
-pred
+processed_data/
+data/
+my_sample_prediction/
+stopwords/
+model/
+pred/
+data_analyze/
+processed_data/StackExchange_s150_t10
+processed_data/Weibo_s100_t10
